# biblioteca

./: .gitignore  README.md  books_api.py  pyproject.toml
biblioteca/: settings.py  urls.py
books/: admin.py  forms.py  models.py  urls.py  views.py
books/templates/books/: confirm_delete_review.html  detail.html  edit_review.html  list.html
templates/: base.html  navbar.html
users/: forms.py  models.py  urls.py  views.py
users/templates/users/: login.html  profile.html  profile_edit.html  register.html
