[tool.poetry]
name = "biblioteca"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pillow = "^9.5.0"
django-crispy-forms = "^2.0"
requests = "^2.31.0"
crispy-bootstrap5 = "^0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"
djlint = "^1.25.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
